# text-summarizer

./: LICENSE  main.py  pyproject.toml  requirements.txt  setup.py  template.py
research/: trials.py
textSummarizer/components/: data_validation.py  model_trainer.py
textSummarizer/logging/: __init__.py
textSummarizer/pipeline/: stage_01_data_ingestion.py
textSummarizer/utils/: common.py
